src/test/deca/context/invalid/pierre/objects/methodDefinedTwice.deca
class A {
    int method(int i) {}
    int method(int i) {}
}
{}